<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Video Maker-Trim And Cut Video Editor</string>
    <string name="add">Add</string>
    <string name="video_clip">Video Clip</string>
    <string name="video_dubbing">Dubbing </string>
    <string name="cancel">Cancel</string>
    <string name="sure">OK</string>
    <string name="open_permission">No permission in current app,wether go to settings?</string>
    <string name="save">Save</string>
    <string name="preview_">Preview</string>
    <string name="please_wait_">Please wait </string>
    <string name="select_file">Selected Files</string>
    <string name="processing">Processing...</string>
    <string name="select_video_">Select Videos</string>
    <string name="select_music">Select music</string>
    <string name="my_videos">My Videos</string>
    <string name="saving">It is saving</string>
    <string name="save_filed">Failed to save</string>
    <string name="re_name">Rename</string>
    <string name="delete">Delete</string>
    <string name="video_mixing">Video sound mixing</string>
    <string name="video_silence">Video sound elimination</string>
    <string name="start_silence">Start sound elimination</string>
    <string name="video_volume">Video volume </string>
    <string name="music_volume">Music volume</string>
    <string name="processing_in_progress">Preprocessing now</string>
    <string name="unable_to_load_the_file">Unable to load file, please select again</string>
    <string name="pause_dubbing">Pause dubbing</string>
    <string name="start_dubbing">Start dubbing</string>
    <string name="stop_dubbing">Stop dubbing</string>
    <string name="continue_dubbing">Continue dubbing</string>
    <string name="re_dubbing">Re-dubbing</string>
    <string name="click_to_select_the_file">Click \"+\" to select the file</string>
    <string name="drag_to_change_the_position">Drag to change the position</string>
    <string name="video_can_not_be_played">Video unavailable</string>
    <string name="please_choose_music">Please select a music file</string>
    <string name="please_choose_video">Please select a video file</string>
    <string name="can_not_save">Unable to save</string>
    <string name="processing_failed">Processing failed</string>
    <string name="delete_video">Delete Video</string>
    <string name="setting_set">Settings</string>
    <string name="setting_comment">Rate Us</string>
    <string name="setting_suggections">Feedback</string>
    <string name="setting_send_email">Send email</string>
    <string name="setting_no_app_market">You have not installed the app market</string>
    <string name="video_time_too_long">Video time more than one minute, please use after cutting.</string>
</resources>
