<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_bg">

    <Button
        android:id="@+id/b_video_dl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/select_video_"
        android:background="@drawable/dialog_bg"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintRight_toLeftOf="@+id/guideline12"
        android:layout_marginRight="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/b_music_dl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="4dp"
        android:background="@drawable/dialog_bg"
        android:text="@string/select_music"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/guideline12"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/select_file"
        android:paddingTop="8dp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/b_video_dl"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline12"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="180dp" />

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="1px"
        android:layout_marginBottom="4dp"
        android:background="#AAAAAA"
        app:layout_constraintBottom_toTopOf="@+id/b_video_dl"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent">

    </FrameLayout>

    <FrameLayout
        android:layout_width="1px"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="8dp"
        android:background="#AAAAAA"
        app:layout_constraintBottom_toBottomOf="@+id/b_video_dl"
        app:layout_constraintRight_toLeftOf="@+id/guideline12"
        app:layout_constraintTop_toTopOf="@+id/b_music_dl">

    </FrameLayout>

</android.support.constraint.ConstraintLayout>