<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1D1D1D"
    tools:context="com.liubowang.dubbing.HunYin.HunYinActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/gray_border"
        android:id="@+id/constraintLayout3"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/mpv_music_picker_hy"
        app:layout_constraintTop_toBottomOf="@+id/tb_hy"
        app:layout_constraintVertical_bias="0.0">

        <ImageButton
            android:id="@+id/ib_play_hy"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            android:background="@color/colorClean"
            android:padding="8dp"
            android:scaleType="fitCenter"
            android:src="@drawable/play"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />

        <SeekBar
            android:id="@+id/sb_video_controll_hy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toTopOf="@+id/ib_play_hy"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:maxHeight="2dp"
            android:minHeight="2dp"
            android:thumb="@drawable/line_big"
            android:progressDrawable="@drawable/layer_progress_seek"/>


        <android.support.constraint.ConstraintLayout
            android:padding="1dp"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="95dp"
            android:background="@drawable/video_view_bg"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp">

            <VideoView
                android:id="@+id/vv_video_view_hy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_prompt_hy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/click_to_select_the_file"
                android:textColor="#DDDDDD"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />
        </android.support.constraint.ConstraintLayout>

        <com.liubowang.dubbing.JianJi.TimeBoardView
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginBottom="13dp"
            android:layout_marginRight="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginEnd="8dp"
            android:id="@+id/tbv_time_board_hy">

        </com.liubowang.dubbing.JianJi.TimeBoardView>
    </android.support.constraint.ConstraintLayout>



    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline3"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="206dp" />

    <com.liubowang.dubbing.HunYin.MusicPickerView
        android:id="@+id/mpv_music_picker_hy"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toTopOf="@+id/tsv_video_volume_seek_hy"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

    </com.liubowang.dubbing.HunYin.MusicPickerView>

    <com.liubowang.dubbing.HunYin.TextSeekView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toLeftOf="@+id/guideline3"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/tsv_video_volume_seek_hy"
        android:layout_marginBottom="8dp"
        app:textColor="@color/colorWhite"
        app:seekMax="100"
        app:progress="50"
        app:text="@string/video_volume"
        app:layout_constraintBottom_toTopOf="@+id/b_preview_hy"
        app:layout_constraintHorizontal_bias="1.0"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <com.liubowang.dubbing.HunYin.TextSeekView
        android:id="@+id/tsv_music_volume_seek_hy"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/tsv_video_volume_seek_hy"
        app:layout_constraintLeft_toLeftOf="@+id/guideline3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tsv_video_volume_seek_hy"
        app:progress="50"
        app:seekMax="100"
        app:text="@string/music_volume"
        app:textColor="@color/colorWhite"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />


    <Button
        android:id="@+id/b_preview_hy"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/start_btn_bg"
        android:text="@string/preview_"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toTopOf="@+id/banner_container_hy"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/guideline4"
        app:layout_constraintRight_toLeftOf="@+id/guideline5"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <Button
        android:id="@+id/b_save_hy"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/start_btn_bg"
        android:text="@string/save"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="@+id/b_preview_hy"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/guideline6"
        app:layout_constraintRight_toLeftOf="@+id/guideline7"
        app:layout_constraintTop_toTopOf="@+id/b_preview_hy"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <LinearLayout
        android:id="@+id/banner_container_hy"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
    </LinearLayout>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline4"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="41dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline5"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="165dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline6"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.6"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="247dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline7"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="370dp" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/tb_hy"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/navi_bg"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/iv_top_image_hy"
        app:title="@string/video_mixing"
        app:navigationIcon="@drawable/back"
        app:titleTextColor="@color/colorWhite"/>

    <ImageView
        android:id="@+id/iv_top_image_hy"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/navi_bg"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="0dp" />

</android.support.constraint.ConstraintLayout>
